# Copyright (c) 2022-2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/test.gni")
import(
    "//foundation/distributedhardware/distributed_input/distributedinput.gni")

module_out_path = "distributed_input/sink_collector"

group("sinkcollectorunittest") {
  testonly = true

  deps = [ ":distributed_input_inner_sinkcollector_test" ]
}

## UnitTest distributed_input_manager_service_test {{{
ohos_unittest("distributed_input_inner_sinkcollector_test") {
  module_out_path = module_out_path

  include_dirs = [
    "${av_transport_path}/common/include",
    "${services_sink_path}/inputcollector/include",
    "${common_path}/include",
    "${services_state_path}/include",
    "${frameworks_path}/include",
    "${fwk_common_path}/log/include",
    "${fwk_common_path}/utils/include",
    "${utils_path}/include",
    "//third_party/json/include",
    "${fwk_interfaces_path}/include",
    "${fwk_interfaces_path}/include/ipc",
  ]

  sources = [
    "${common_path}/include/input_hub.cpp",
    "${services_sink_path}/inputcollector/src/distributed_input_collector.cpp",
    "distributed_input_collector_test.cpp",
  ]

  cflags = [
    "-Wall",
    "-Werror",
    "-g3",
    "-Dprivate=public",
    "-Dprotected=public",
  ]

  defines = [
    "HI_LOG_ENABLE",
    "DH_LOG_TAG=\"distributedinpututtest\"",
    "LOG_DOMAIN=0xD004120",
  ]

  deps = [
    "${services_state_path}:libdinput_sink_state",
    "${utils_path}:libdinput_utils",
    "//third_party/libevdev:libevdev",
    "//third_party/openssl:libcrypto_shared",
  ]

  external_deps = [
    "c_utils:utils",
    "eventhandler:libeventhandler",
    "ipc:ipc_core",
    "safwk:system_ability_fwk",
    "samgr:samgr_proxy",
  ]

  cflags_cc = [ "-DHILOG_ENABLE" ]
}
## UnitTest distributed_input_manager_service_test }}}
