# Copyright (c) 2021-2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/test.gni")
import(
    "//foundation/distributedhardware/distributed_input/distributedinput.gni")

module_out_path = "distributed_input/sink_manager"

group("sinkmanagerunittest") {
  testonly = true

  deps = [ ":distributed_input_sinkmanager_test" ]
}

## UnitTest distributed_input_manager_service_test {{{
ohos_unittest("distributed_input_sinkmanager_test") {
  module_out_path = module_out_path

  include_dirs = [
    "${innerkits_path}/include",
    "${innerkits_path}/src",
    "${ipc_path}/include",
    "${ipc_path}/src",
    "${distributedinput_path}services/transportbase/include",
    "${distributedinput_path}services/sink/transport/include",
    "${distributedinput_path}services/sink/sinkmanager/include",
    "${distributedinput_path}frameworks/include",
    "//commonlibrary/c_utils/base/include",
    "//utils/system/safwk/native/include",
    "${common_path}/include",
    "${fwk_common_path}/log/include",
    "${fwk_common_path}/utils/include",
    "${fwk_utils_path}/include/log",
    "${fwk_utils_path}/include",
    "${service_common}/include",
    "//third_party/json/include",
    "//third_party/libevdev/libevdev/",
    "//foundation/communication/dsoftbus/interfaces/kits/transport",
    "${services_sink_path}/inputcollector/include",
    "${dfx_utils_path}/include",
    "${utils_path}/include",
    "${fwk_interfaces_path}/include",
    "${fwk_interfaces_path}/include/ipc",
    "//foundation/window/window_manager/interfaces/innerkits/dm",
    "//foundation/window/window_manager/utils/include/",
    "//foundation/graphic/graphic_2d/rosen/modules/render_service_base/include",
    "//foundation/graphic/graphic_2d/interfaces/inner_api/surface",
    "//foundation/graphic/graphic_2d/interfaces/inner_api/common",
    "//drivers/peripheral/display/interfaces/include",
    "//drivers/peripheral/base",
    "//foundation/graphic/graphic_2d/utils/buffer_handle/export",
    "${common_path}/test/mock",
    "//base/security/access_token/interfaces/innerkits/accesstoken/include",
    "//base/security/access_token/interfaces/innerkits/nativetoken/include",
    "//base/security/access_token/interfaces/innerkits/token_setproc/include",
    "//foundation/systemabilitymgr/samgr/interfaces/innerkits/samgr_proxy/include",
    "${distributedinput_path}/services/sink/sinkmanager/test/sinkmanagerunittest/mock/",
    "${services_source_path}/inputinject/include",
    "${distributedinput_path}/inputdevicehandler/include",
  ]

  sources = [
    "${common_path}/include/input_hub.cpp",
    "${common_path}/include/white_list_util.cpp",
    "${common_path}/test/mock/session_mock.cpp",
    "${common_path}/test/mock/softbus_bus_center_mock.cpp",
    "${distributedinput_path}/services/sink/sinkmanager/test/sinkmanagerunittest/mock/mock_process.cpp",
    "${distributedinput_path}/services/transportbase/src/distributed_input_transport_base.cpp",
    "${distributedinput_path}services/sink/sinkmanager/src/distributed_input_sink_event_handler.cpp",
    "${distributedinput_path}services/sink/sinkmanager/src/distributed_input_sink_manager.cpp",
    "${distributedinput_path}services/sink/transport/src/distributed_input_sink_switch.cpp",
    "${distributedinput_path}services/sink/transport/src/distributed_input_sink_transport.cpp",
    "${ipc_path}/src/distributed_input_sink_stub.cpp",
    "${ipc_path}/src/get_sink_screen_infos_call_back_stub.cpp",
    "${ipc_path}/src/sharing_dhid_listener_stub.cpp",
    "${services_sink_path}/inputcollector/src/distributed_input_collector.cpp",
    "distributed_input_sinkmanager_test.cpp",
  ]

  cflags = [
    "-Wall",
    "-Werror",
    "-g3",
    "-Dprivate=public",
    "-Dprotected=public",
  ]

  defines = [
    "HI_LOG_ENABLE",
    "DH_LOG_TAG=\"distributedinpututtest\"",
    "LOG_DOMAIN=0xD004100",
    "COMPILE_TEST_MODE",
  ]

  deps = [
    "${dfx_utils_path}:libdinput_dfx_utils",
    "${distributedinput_path}/services/sink/transport:libdinput_sink_trans",
    "${fwk_interfaces_path}:libdhfwk_sdk",
    "${fwk_utils_path}:distributedhardwareutils",
    "${utils_path}:libdinput_utils",
    "${window_manager_path}/dm:libdm",
    "//base/notification/eventhandler/frameworks/eventhandler:libeventhandler",
    "//base/security/access_token/interfaces/innerkits/accesstoken:libaccesstoken_sdk",
    "//base/security/access_token/interfaces/innerkits/nativetoken:libnativetoken",
    "//base/security/access_token/interfaces/innerkits/token_setproc:libtoken_setproc",
    "//third_party/libevdev:libevdev",
    "//third_party/openssl:libcrypto_static",
  ]

  external_deps = [
    "c_utils:utils",
    "hitrace_native:hitrace_meter",
    "ipc:ipc_core",
    "safwk:system_ability_fwk",
    "samgr:samgr_proxy",
  ]

  cflags_cc = [ "-DHILOG_ENABLE" ]
}
## UnitTest distributed_input_manager_service_test }}}
