# Copyright (c) 2021-2024 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/test.gni")
import(
    "//foundation/distributedhardware/distributed_input/distributedinput.gni")

module_out_path = "distributed_input/source_inject"

group("sourceinjectunittest") {
  testonly = true

  deps = [ ":distributed_input_inner_sourceinject_test" ]
}

## UnitTest distributed_input_manager_service_test {{{
ohos_unittest("distributed_input_inner_sourceinject_test") {
  module_out_path = module_out_path

  include_dirs = [
    "${av_transport_path}/common/include",
    "${innerkits_path}/include",
    "${ipc_path}/include",
    "${services_source_path}/inputinject/include",
    "${frameworks_path}/include",
    "${common_path}/include",
    "${services_state_path}/include",
    "${frameworks_path}/include",
    "${service_common}/include",
    "${dfx_utils_path}/include",
    "${utils_path}/include",
    "${fwk_interfaces_path}/include",
    "${fwk_interfaces_path}/include/ipc",
    "${distributedinput_path}/inputdevicehandler/include",
    "${common_path}/test/mock",
  ]

  sources = [
    "${common_path}/include/input_hub.cpp",
    "${common_path}/test/mock/socket_mock.cpp",
    "${common_path}/test/mock/softbus_bus_center_mock.cpp",
    "${distributedinput_path}/inputdevicehandler/src/distributed_input_handler.cpp",
    "${services_source_path}/inputinject/src/distributed_input_inject.cpp",
    "${services_source_path}/inputinject/src/distributed_input_node_manager.cpp",
    "${services_source_path}/inputinject/src/virtual_device.cpp",
    "distributed_input_sourceinject_test.cpp",
  ]

  cflags = [
    "-Wall",
    "-Werror",
    "-g3",
    "-Dprivate=public",
    "-Dprotected=public",
  ]

  defines = [
    "HI_LOG_ENABLE",
    "DH_LOG_TAG=\"distributedinpututtest\"",
    "LOG_DOMAIN=0xD004120",
  ]

  deps = [
    "${dfx_utils_path}:libdinput_dfx_utils",
    "${innerkits_path}:libdinput_sdk",
    "${utils_path}:libdinput_utils",
  ]

  external_deps = [
    "c_utils:utils",
    "distributed_hardware_fwk:distributedhardwareutils",
    "dsoftbus:softbus_client",
    "eventhandler:libeventhandler",
    "hilog:libhilog",
    "ipc:ipc_core",
    "json:nlohmann_json_static",
    "libevdev:libevdev",
    "openssl:libcrypto_shared",
    "safwk:system_ability_fwk",
    "samgr:samgr_proxy",
  ]

  cflags_cc = [ "-DHILOG_ENABLE" ]
}
## UnitTest distributed_input_manager_service_test }}}
